# django-common-stats

./: .gitignore  MANIFEST.in  README.rst  build.sh  setup.cfg
docs/: index.md
mylib/: admin_page_size.py  africastalking.py  backends.py  export.py  flowise.py  image.py  my_common.py  mygenerics.py  mymixins.py  pdf.py  queryset2excel.py  tasks.py  unused_utils.py
reports/: apps.py  data_pipeline.py  items.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
stats/: admin.py  apps.py  models.py  receivers.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py  writers.py
stats/exports/: serializers.py  tests.py  urls.py  views.py
stats/migrations/: 0001_initial.py  0002_auto_20230530_2043.py  0003_auto_20230601_2005.py  0004_auto_20230601_2006.py  0005_auto_20230601_2332.py  0006_auto_20230601_2333.py  0007_auto_20230602_0023.py  0008_alter_export_id_alter_importfile_id_and_more.py  0009_auto_20230920_1404.py  0010_alter_export_id_alter_importfile_id_and_more.py  0011_auto_20240529_1252.py
stats/templates/: test.html
