[metadata]
name = django-sistch-drf-stats
version = 1.1.6
author = Mwangi Micha
author_email = micha@sisitech.com
maintainer = Mwangi Micha
maintainer_email = micha@sisitech.com
description = Django Rest Stats Helper
long_description = file:README.rst
url = sisitech.com
keywords = django djangorestframework drf
classifires = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: